# Simple-Game-Engine

./: CMakeLists.txt  GameEngine.cpp  GameEngine.h
Shaders/: Default.frag  Default.vert
glad/include/glad/: glad.h
glad/src/: glad.c
libs/assimp/include/assimp/: defs.h  matrix4x4.h
src/: Application.cpp  Application.h  Component.h  ComponentPool.h  Entity.h  GameplayState.cpp  GameplayState.h  IComponentPool.h  IGameState.h  IRenderAdapter.h  ISystem.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  MeshFactory.h  OpenGLRenderAdapter.cpp  OpenGLRenderAdapter.h  World.h
src/Common/: OpenGLKeyCodes.h
src/Components/: Camera.h  Light.h  Material.h  MeshRenderer.h  Tag.h  Transform.h
src/Loaders/: MeshLoader.cpp  MeshLoader.h
src/Resources/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
src/Resources/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.h  ShaderProgram.h
src/Systems/: CameraSystem.cpp  CameraSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
